Don't run height-to-normal map if there aren't enough channels

BUG:455077
(cherry picked from commit 55f4df14e1f12ea7cc1214783685ee74a37cace1)